[tool.poetry]
name = "pubmed-company-papers"
version = "0.1.0"
description = "A tool to fetch research papers with authors affiliated with pharmaceutical or biotech companies"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "pubmed_company_papers"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
pandas = "^2.1.0"
biopython = "^1.83"
click = "^8.1.7"
tqdm = "^4.66.1"
typing-extensions = "^4.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
mypy = "^1.5.1"
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
get-papers-list = "pubmed_company_papers.cli:main"